--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
