--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-levenshtein": "^1.1.6",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "react": "^18",
