--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
+    "@types/js-levenshtein": "^1.1.3",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
