--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@replit/codemirror-vim": "^6.3.0",
+    "@uiw/react-codemirror": "^4.24.1",
     "class-transformer": "^0.5.1",
+    "codemirror": "^6.0.2",
     "js-levenshtein": "^1.1.6",
     "lodash": "^4.17.21",
     "next": "^14.2.22",
